Edited title and text

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mallow</title>
+  <title>Quiz site</title>
   <style>
     * {
       margin: 0;
@@ -712,7 +712,7 @@
 <body>
   <div class="container">
     <div id="uploadScreen" class="card upload-section">
-      <h1>Topnotcher hottie quiz 2025✨🕯️🤞🥐</h1>
+      <h1>Untitled Quiz Site!</h1>
       <p>Import your questions to start studying</p>
       
       <div id="savedFilesSection" style="display: none;" class="saved-files-section">
@@ -812,8 +812,8 @@
 
     <div id="resultsScreen" class="card" style="display: none;">
       <div class="results-container">
-        <h2 class="results-title">Quiz Complete babyyy aaaa</h2>
-        <p class="results-subtitle">Great job, babut!</p>
+        <h2 class="results-title">Quiz Complete</h2>
+        <p class="results-subtitle">Great job!</p>
 
         <div class="stats-grid">
           <div class="stats-row">
@@ -1456,7 +1456,7 @@
     }
 
     function exportResults() {
-      let text = 'NURSING BOARD REVIEW RESULTS\n';
+      let text = 'RESULTS\n';
       text += '='.repeat(50) + '\n';
       text += `File: ${currentFileName}\n`;
       text += `Difficulty: ${selectedDifficulty.toUpperCase()}\n`;
